# solara

./: .gitignore  CMakeLists.txt  LICENSE
examples/: main.sol
source/: main.cpp
source/solara/: ast.cpp  ast.h  common.h  lexer.cpp  lexer.h  log.cpp  log.h  parser.cpp  parser.h  solara.cpp  solara.h  stringtable.cpp  stringtable.h  token.cpp  token.h
